--- a/index.html
+++ b/index.html
@@ -1,101 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flexbox layout</title>
-    <link rel="stylesheet" href="./css/flexbox/index.css">
+    <title>Spotifu</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="wrapper">
-        <h2>Flex</h2>
-        <div class="flex">
-            <div class="box"></div>
-            <div class="box"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quasi! Asperiores, quae?</p>
-        </div>
-    </div>
-    <div class="wrapper">
-        <h2>Flex Wrap</h2>
-        <div class="flex-wrap">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <div class="box"></div>
-        </div>
-    </div>
-    <div class="wrapper">
-        <h2>Flex Direction</h2>
-        <div class="flex-direction">
-            <div class="box">primer</div>
-            <div class="box">segundo</div>
-            <div class="box">tercer</div>
-            <div class="box">cuarto</div>
-            <div class="box">quinto</div>
-            <div class="box">sexto</div>
-        </div>
-        <form action="">
-            <input type="text" placeholder="ingresa tu mensaje"> <button>Enviar</button>
-        </form>
-    </div>
-    <div class="wrapper">
-        <h2>Flex Order</h2>
-        <div class="flex-order">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque omnis natus impedit, saepe vero beatae placeat provident?</p>
-        </div>
-        <div class="flex-order">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque omnis natus impedit, saepe vero beatae placeat
-                provident?</p>
-        </div>
-        <div class="flex-order">
-            <img src="./imagenes/grand-escape.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque omnis natus impedit, saepe vero beatae placeat
-                provident?</p>
-        </div>
-    </div>
-    <div class="wrapper">
-        <h2>Default Flex</h2>
-        <div class="display-flex">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-
-        </div>
-    </div>
+    <i class="button icon-home"></i>
+    <i class="icon-home-active"></i>
 </body>
 </html>
