--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,18 @@
     <title>Spotifu</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
-<body>
-    <i class="button icon-home"></i>
-    <i class="icon-home-active"></i>
+<body class="body">
+    <div style="background-color: red ;">
+
+        <button class="button-icon is-white" aria-label="Reproducir" title="Reproducir">
+         <i class="icon-play" aria-hidden="true"></i>
+        </button>
+         <button class="button-icon is-primary" aria-label="Reproducir" title="Reproducir">
+             <i class="icon-play" aria-hidden="true"></i>
+         </button>
+         <button class="button-icon " aria-label="Reproducir" title="Reproducir">
+             <i class="icon-play" aria-hidden="true"></i>
+         </button>
+    </div>
 </body>
 </html>
