--- a/index.html
+++ b/index.html
@@ -9,17 +9,115 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body class="body">
-    <div style="background-color: red ;">
+    <header class="logo">
+        <a href="/" aria-current="page">
+            <img src="./img/spotifu-logo.png" class="logo-image" width="112" height="32" alt="Logo de Spotifu">
+        </a>
+    </header>
+    <nav class="menu" aria-label="Pricipal">
+        <ul class="menu-list">
+            <li class="menuItem is-active">
+                <a href="/" class="link" aria-colcount="page">
+                    <i class="icon-home" aria-hidden="true"></i>
+                    <samp>Inicio</samp>
+                </a>
+            </li>
+            <li class="menuItem ">
+                <a href="/" class="link">
+                    <i class="icon-search" aria-hidden="true"></i>
+                    <samp>Buscar</samp>
+                </a>
+            </li>
+            <li class="menuItem ">
+                <a href="/" class="link">
+                    <i class="icon-credit-card" aria-hidden="true"></i>
+                    <samp>Premiun</samp>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <nav class="list" aria-labelledby="library-navigation">
+        <h2 class="list-title" id="library-navegation">Tu biblioteca</h2>
+        <ul class="list-content">
+            <li class="list-item">
+                <a href="#" class="link" >Creada para ti</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Escuchado recientemente</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Tus Me Gusta</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Artistas</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Podcast</a>
+            </li>
+        </ul>
+    </nav>
 
-        <button class="button-icon is-white" aria-label="Reproducir" title="Reproducir">
-         <i class="icon-play" aria-hidden="true"></i>
-        </button>
-         <button class="button-icon is-primary" aria-label="Reproducir" title="Reproducir">
-             <i class="icon-play" aria-hidden="true"></i>
-         </button>
-         <button class="button-icon " aria-label="Reproducir" title="Reproducir">
-             <i class="icon-play" aria-hidden="true"></i>
-         </button>
-    </div>
+    <nav class="list" aria-describedby="playlist-navigation">
+        <h2 class="list-title" id="playlist-navigation">Playlist</h2>
+        <ul class="list-content">
+            <li class="list-item">
+                <a href="#" class="link">Lo mejor de los mejores</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Naruto al 100% para programar</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Para cantar en la ducha</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Sin parar</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Naruto openings</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Boku no pico</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">This is Pokémon</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Más populares de la semana</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Mis pistas de shazam</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Audio Library</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Amor y otras</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Latin</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Pokemon</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Para cantar</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Yui</a>
+            </li>
+        </ul>
+    </nav>
+
+
+
+
+
+       <button class="button-icon is-white" aria-label="Reproducir" title="Reproducir">
+           <i class="icon-play" aria-hidden="true"></i>
+       </button>
+       <button class="button-icon is-primary" aria-label="Reproducir" title="Reproducir">
+           <i class="icon-play" aria-hidden="true"></i>
+       </button>
 </body>
+
 </html>
