--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
 </head>
 
 <body class="body">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo sunt aspernatur nobis.</p>
-    <div class="slider">
-        <div class="slider-progress">
-            <button class="slider-buttom" aria-label="controlar el progreso de la reproduccion"></button>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisi aspernatur nobis.</p>
+    <div class="player-controls">
+        <div class="player-controls-buttons">
+            <button class="button-icon " aria-label="Anterior" title="Anterior">
+                <i class="icon-prev" aria-hidden="true"></i>
+            </button>
+            <button class="button-icon is-white" aria-label="Reproducir" title="Reproducir">
+                <i class="icon-play" aria-hidden="true"></i>
+            </button>
+            <button class="button-icon " aria-label="Siguiente" title="Siguiente">
+                <i class="icon-next" aria-hidden="true"></i>
+            </button>
+        </div>
+        <div class="player-playback">
+            <span class="player-playback-progress-time">01:40</span>
+            <div class="slider">
+                <div class="slider-progress">
+                    <button class="slider-buttom" aria-label="controlar el progreso de la reproduccion"></button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="sidebar">
