--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </button>
         </div>
         <div class="player-playback">
-            <span class="player-playback-progress-time">01:40</span>
+            <span class="player-playback-progress-time">01:44
+            </span>
             <div class="slider">
                 <div class="slider-progress">
                     <button class="slider-buttom" aria-label="controlar el progreso de la reproduccion"></button>
